# Deal_Transfer

./: CMakeLists.txt  main.cpp  make_index.cpp  make_index.hpp  my_utils.cpp  my_utils.hpp  note  read_tran.cpp  read_tran.hpp  thread_deal.hpp
slow/: CMakeLists.txt  Csv.hpp  main.cpp  make_index.cpp  make_index.hpp  note  trans.cpp  trans.hpp
